--- a/.gitignore
+++ b/.gitignore
@@ -5,32 +5,31 @@
 #   git config --global core.excludesfile '~/.gitignore_global'
 
 # Ignore bundler config.
-/.bundle
+src/.bundle
 
 # Ignore all logfiles and tempfiles.
-/log/*
-/tmp/*
-!/log/.keep
-!/tmp/.keep
-
-# Ignore pidfiles, but keep the directory.
-/tmp/pids/*
-!/tmp/pids/
-!/tmp/pids/.keep
+src/log/*
+src/tmp/*
+!src/log/.keep
+!src/tmp/pids/*
+!src/tmp/pids/
+!src/tmp/pids/.keep
 
 # Ignore uploaded files in development.
-/storage/*
-!/storage/.keep
+src/storage/*
+!src/storage/.keep
 
-/public/assets
-.byebug_history
+src/public/assets
+src/.byebug_history
 
 # Ignore master key for decrypting credentials and more.
-/config/master.key
+src/config/master.key
 
-/public/packs
-/public/packs-test
-/node_modules
-/yarn-error.log
-yarn-debug.log*
-.yarn-integrity
+src/public/packs
+src/public/packs-test
+src/node_modules
+src/yarn-error.log
+src/yarn-debug.log*
+src/.yarn-integrity
+
+src/db/mysql_data
